--- a/.github/workflows/test-automation.yml
+++ b/.github/workflows/test-automation.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r playwright-tests/requirements.txt
+          pip install -r tests/e2e-test/requirements.txt
 
       - name: Ensure browsers are installed
         run: python -m playwright install --with-deps chromium
@@ -45,7 +45,7 @@ jobs:
         id: test1
         run: |
           xvfb-run pytest --headed --html=report/report.html --self-contained-html
-        working-directory: playwright-tests
+        working-directory: tests/e2e-test
         continue-on-error: true
 
       - name: Sleep for 30 seconds
@@ -58,7 +58,7 @@ jobs:
         id: test2
         run: |
           xvfb-run pytest --headed --html=report/report.html --self-contained-html
-        working-directory: playwright-tests
+        working-directory: tests/e2e-test
         continue-on-error: true
 
       - name: Sleep for 60 seconds
@@ -71,7 +71,7 @@ jobs:
         id: test3
         run: |
           xvfb-run pytest --headed --html=report/report.html --self-contained-html
-        working-directory: playwright-tests
+        working-directory: tests/e2e-test
 
       - name: Upload test report
         id: upload_report
@@ -79,7 +79,7 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: test-report
-          path: playwright-tests/report/*
+          path: tests/e2e-test/report/*
 
       - name: Send Notification on Failure
         if: always()
@@ -91,7 +91,7 @@ jobs:
           if [ "$IS_SUCCESS" = "true" ]; then
             EMAIL_BODY=$(cat <<EOF
             {
-              "body": "<p>Dear Team,</p><p>We would like to inform you that the ${{ env.accelerator_name }} Test Automation process has completed successfully.</p><p><strong>Run URL:</strong> ${RUN_URL}<br> ${OUTPUT}</p><p><strong>Test Report:</strong> ${REPORT_URL}</p><p>Best regards,<br>Your Automation Team</p>",
+              "body": "<p>Dear Team,</p><p>We would like to inform you that the ${{ env.accelerator_name }} Test Automation process has completed successfully.</p><p><strong>Run URL:</strong> <a href=\"${RUN_URL}\">${RUN_URL}</a><br></p><p><strong>Test Report:</strong> <a href=\"${REPORT_URL}\">${REPORT_URL}</a></p><p>Best regards,<br>Your Automation Team</p>",
               "subject": "${{ env.accelerator_name }} Test Automation - Success"
             }
           EOF
@@ -99,7 +99,7 @@ jobs:
           else
             EMAIL_BODY=$(cat <<EOF
             {
-              "body": "<p>Dear Team,</p><p>We would like to inform you that the ${{ env.accelerator_name }} Test Automation process  has encountered an issue and has failed to complete successfully.</p><p><strong>Run URL:</strong> ${RUN_URL}<br> ${OUTPUT}</p><p><strong>Test Report:</strong> ${REPORT_URL}</p><p>Please investigate the matter at your earliest convenience.</p><p>Best regards,<br>Your Automation Team</p>",
+              "body": "<p>Dear Team,</p><p>We would like to inform you that the ${{ env.accelerator_name }} Test Automation process  has encountered an issue and has failed to complete successfully.</p><p><strong>Run URL:</strong> <a href=\"${RUN_URL}\">${RUN_URL}</a><br> ${OUTPUT}</p><p><strong>Test Report:</strong> <a href=\"${REPORT_URL}\">${REPORT_URL}</a></p><p>Please investigate the matter at your earliest convenience.</p><p>Best regards,<br>Your Automation Team</p>",
               "subject": "${{ env.accelerator_name }} Test Automation - Failure"
             }
           EOF
@@ -107,6 +107,6 @@ jobs:
           fi
 
           # Send the notification
-          curl -X POST "${{ secrets.EMAILNOTIFICATION_LOGICAPP_URL }}" \
+          curl -X POST "${{ secrets.EMAILNOTIFICATION_LOGICAPP_URL_TA }}" \
             -H "Content-Type: application/json" \
             -d "$EMAIL_BODY" || echo "Failed to send notification"
