--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,9 @@ on:
       branches:
         - main
         - dev
+    push:
+      branches:
         - deploy-and-test
-    # push:
-    #   branches:
-    #     - deploy-and-test
     #     - main
     # schedule:
     #   - cron: '0 9,21 * * *'  # Runs at 9:00 AM and 9:00 PM GMT
