--- a/.github/workflows/test-automation.yml
+++ b/.github/workflows/test-automation.yml
@@ -7,6 +7,10 @@ on:
             required: true
             type: string
             description: "Web URL for DocGen"
+        secrets:
+          EMAILNOTIFICATION_LOGICAPP_URL_TA:
+            required: true
+            description: "Logic App URL for email notifications"
 
 env:
     url: ${{ inputs.DOCGEN_URL }}
@@ -81,7 +85,7 @@ jobs:
           name: test-report
           path: tests/e2e-test/report/*
 
-      - name: Send Notification on Failure
+      - name: Send Notification
         if: always()
         run: |
           RUN_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
