--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Test with pytest
       run: |
         export PYTHONPATH=$(pwd)/src
-        pytest -v --show-capture=stdout -k "not integration"
+        pytest -v --show-capture=stdout -k "not integration" ./src/tests
 
   test_windows:
     runs-on:
