fix: remove deploy-and-test branch from workflow triggers

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   push:
-    branches: [ "main", "deploy-and-test" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
