Updates in post deployment script and readme files

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -1,8 +1,10 @@
 # Chat
 DEBUG=True
+AZURE_AI_AGENT_API_VERSION=
+AZURE_AI_AGENT_ENDPOINT=
+AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME=
 AZURE_OPENAI_RESOURCE=
 AZURE_OPENAI_MODEL=
-AZURE_OPENAI_KEY=
 AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
 AZURE_OPENAI_TEMPERATURE=0
 AZURE_OPENAI_TOP_P=1.0
