--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,17 @@
 name: DocGen Deploy-Test-Cleanup Pipeline
 
 on:
-    # workflow_run:
-    #   workflows: ["Build Docker and Optional Push"]
-    #   types:
-    #     - completed
-    #   branches:
-    #     - main
-    #     - dev
-    #     - demo
+    workflow_run:
+      workflows: ["Build Docker and Optional Push"]
+      types:
+        - completed
+      branches:
+        - main
+        - dev
+        - demo
 
-  push:
-    branches:
-      - deploy-wf-fix
-
-  schedule:
-    - cron: '0 9,21 * * *'  # Runs at 9:00 AM and 9:00 PM GMT
+    schedule:
+      - cron: '0 9,21 * * *'  # Runs at 9:00 AM and 9:00 PM GMT
 
 env:
   GPT_MIN_CAPACITY: 250
