--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Pylint
         run: |
           echo "Running Pylint..."
-          python -m flake8 --config=.flake8 --verbose .
+          python -m flake8 --config=.flake8 --exclude=tests --verbose .
           
