Updated DeploymentGuide.md and azure.yml  file

--- a/azure.yaml
+++ b/azure.yaml
@@ -6,6 +6,9 @@ name: document-generation
 metadata:
   template: document-generation@1.0
 
+requiredVersions:
+  azd: '>= 1.15.0'
+
 parameters:
   solutionPrefix:
     type: string
