--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -2,7 +2,7 @@ name: Build Docker and Optional Push
 
 on:
   push:
-    branches: [main, dev, demo, deploy-wf-minorfix]
+    branches: [main, dev, demo]
   pull_request:
     branches: [main, dev, demo]
     types:
