--- a/infra/scripts/index_scripts/requirements.txt
+++ b/infra/scripts/index_scripts/requirements.txt
@@ -1,13 +1,13 @@
-azure-storage-file-datalake
-openai
-pypdf
+azure-storage-file-datalake==12.20.0
+openai==1.84.0
+pypdf==5.6.0
 # pyodbc
-tiktoken
-msal[broker]==1.31.1
-azure-identity
-azure-ai-textanalytics
+tiktoken==0.9.0
+msal[broker]==1.32.3
+azure-identity==1.23.0
+azure-ai-textanalytics==5.3.0
 azure-search-documents==11.6.0b12
-azure-keyvault-secrets
-pandas
+azure-keyvault-secrets==4.9.0
+pandas==2.3.0
 # pymssql
 datetime
