--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: DocGen Deploy-Test-Cleanup Pipeline
 
 on:
+    push:
+      branches:
+        - build-main-json
     workflow_run:
       workflows: ["Build Docker and Optional Push"]
       types:
@@ -138,7 +141,7 @@ jobs:
           az deployment group create \
             --name ${{ env.SOLUTION_PREFIX }}-deployment \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
-            --template-file infra/main.json \
+            --template-file infra/main.bicep \
             --parameters \
                 environmentName="${{ env.SOLUTION_PREFIX }}" \
                 secondaryLocation="northcentralus" \
