--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -208,13 +208,25 @@ jobs:
           az account set --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
 
           echo "Running post-deployment script..."
-          bash ./infra/scripts/process_sample_data.sh
+          
+          bash ./infra/scripts/copy_kb_files.sh \
+            "${{ env.STORAGE_ACCOUNT_NAME }}" \
+            "${{ env.STORAGE_CONTAINER_NAME }}" \
+            "${{ secrets.AZURE_CLIENT_ID }}"
+
+          bash ./infra/scripts/run_create_index_scripts.sh \
+            "${{ env.KEY_VAULT_NAME }}" \
+            "${{ env.RESOURCE_GROUP_NAME }}" \
+            "${{ env.AI_FOUNDRY_NAME }}" \
+            "${{ env.RESOURCE_GROUP_NAME }}" \
+            "${{ env.AI_SEARCH_SERVICE_NAME }}" \
+            "${{ secrets.AZURE_CLIENT_ID }}"
 
       - name: Logout from Azure
         if: always()
         run: |
           az logout
-          az auth logout
+          azd auth logout
           echo "Logged out from Azure."
 
   
