refactor deploy.yml use azd for cleanup

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       RESOURCE_GROUP_NAME: ${{ steps.check_create_rg.outputs.RESOURCE_GROUP_NAME }}
+      SOLUTION_NAME: ${{ steps.generate_rg_name.outputs.SOLUTION_NAME }}
       WEBAPP_URL: ${{ steps.deploy.outputs.WEBAPP_URL }}
     steps:
       - name: Checkout Code
@@ -128,6 +129,7 @@ jobs:
           UPDATED_TIMESTAMP=$(echo $TIMESTAMP | tail -c 6)
           UNIQUE_SOLUTION_NAME="${COMMON_PART}${UPDATED_TIMESTAMP}"
           echo "SOLUTION_NAME=${UNIQUE_SOLUTION_NAME}" >> $GITHUB_ENV
+          echo "SOLUTION_NAME=${UNIQUE_SOLUTION_NAME}" >> $GITHUB_OUTPUT
           echo "Generated SOLUTION_NAME: ${UNIQUE_SOLUTION_NAME}"
 
       - name: Create Environment and set Variables
@@ -228,175 +230,205 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RESOURCE_GROUP_NAME: ${{ needs.deploy.outputs.RESOURCE_GROUP_NAME }}
+      SOLUTION_NAME: ${{ needs.deploy.outputs.SOLUTION_NAME }}
     steps:
       - name: Setup Azure CLI
         run: |
           curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
           az --version  # Verify installation
 
+      - name: Setup Azure Developer CLI
+        run: |
+          curl -fsSL https://aka.ms/install-azd.sh | sudo bash
+          azd version
+
       - name: Login to Azure
         run: |
           az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+          azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --client-secret ${{ secrets.AZURE_CLIENT_SECRET }} --tenant-id ${{ secrets.AZURE_TENANT_ID }}
           az account set --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+          azd config set defaults.subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Extract AI Services and Key Vault Names
-        if: always()
+      - name: Select Environment
         run: |
-          echo "Fetching AI Services and Key Vault names before deletion..."
-          
-          # Get Key Vault name
-          KEYVAULT_NAME=$(az resource list --resource-group "${{ env.RESOURCE_GROUP_NAME }}" --resource-type "Microsoft.KeyVault/vaults" --query "[].name" -o tsv)
-          echo "Detected Key Vault: $KEYVAULT_NAME"
-          echo "KEYVAULT_NAME=$KEYVAULT_NAME" >> $GITHUB_ENV
-      
-
-           # Extract AI Services names
-          echo "Fetching AI Services..."
-          AI_SERVICES=$(az resource list --resource-group '${{ env.RESOURCE_GROUP_NAME }}' --resource-type "Microsoft.CognitiveServices/accounts" --query "[].name" -o tsv)
-
-          # Flatten newline-separated values to space-separated
-          AI_SERVICES=$(echo "$AI_SERVICES" | paste -sd ' ' -)
-
-          echo "Detected AI Services: $AI_SERVICES"
-          echo "AI_SERVICES=$AI_SERVICES" >> $GITHUB_ENV
-      
-      - name: Delete Bicep Deployment
-        if: always()
-        run: |
-          set -e  
-          echo "Checking if resource group exists..."
-          rg_exists=$(az group exists --name ${{ env.RESOURCE_GROUP_NAME }})
-          if [ "$rg_exists" = "true" ]; then
-            echo "Resource group exists. Cleaning..."
-            az group delete \
-                --name ${{ env.RESOURCE_GROUP_NAME }} \
-                --yes \
-                --no-wait
-            echo "Resource group deleted...  ${{ env.RESOURCE_GROUP_NAME }}"
+          # Try to select the environment if it exists, otherwise create a minimal environment for cleanup
+          azd env list
+          if azd env list | grep -q "${{ env.SOLUTION_NAME }}"; then
+            echo "Environment ${{ env.SOLUTION_NAME }} found, selecting it..."
+            azd env select ${{ env.SOLUTION_NAME }}
           else
-            echo "Resource group does not exist."
+            echo "Environment ${{ env.SOLUTION_NAME }} not found, creating minimal environment for cleanup..."
+            azd env new ${{ env.SOLUTION_NAME }} --no-prompt
+            azd env set AZURE_RESOURCE_GROUP "${{ env.RESOURCE_GROUP_NAME }}"
+            azd env set AZURE_SUBSCRIPTION_ID "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
           fi
 
-      - name: Wait for Resource Deletion to Complete
-        if: always()
+      - name: Delete deployment using azd
         run: |
-          echo "Waiting for all deployed resources (including AI Services) to be deleted..."
+          set -e
+          echo "Deleting deployment..."
+          azd down --purge --force --no-prompt
+          echo "Deployment deleted successfully."
+
+
+      # - name: Extract AI Services and Key Vault Names
+      #   if: always()
+      #   run: |
+      #     echo "Fetching AI Services and Key Vault names before deletion..."
+          
+      #     # Get Key Vault name
+      #     KEYVAULT_NAME=$(az resource list --resource-group "${{ env.RESOURCE_GROUP_NAME }}" --resource-type "Microsoft.KeyVault/vaults" --query "[].name" -o tsv)
+      #     echo "Detected Key Vault: $KEYVAULT_NAME"
+      #     echo "KEYVAULT_NAME=$KEYVAULT_NAME" >> $GITHUB_ENV
       
-          # Convert AI_SERVICES space-separated string into an array
-          IFS=' ' read -r -a resources_to_check <<< "${{ env.AI_SERVICES }}"
+
+      #      # Extract AI Services names
+      #     echo "Fetching AI Services..."
+      #     AI_SERVICES=$(az resource list --resource-group '${{ env.RESOURCE_GROUP_NAME }}' --resource-type "Microsoft.CognitiveServices/accounts" --query "[].name" -o tsv)
+
+      #     # Flatten newline-separated values to space-separated
+      #     AI_SERVICES=$(echo "$AI_SERVICES" | paste -sd ' ' -)
+
+      #     echo "Detected AI Services: $AI_SERVICES"
+      #     echo "AI_SERVICES=$AI_SERVICES" >> $GITHUB_ENV
       
-          echo "Resources to check for deletion:"
-          printf '%s\n' "${resources_to_check[@]}"
+      # - name: Delete Bicep Deployment
+      #   if: always()
+      #   run: |
+      #     set -e  
+      #     echo "Checking if resource group exists..."
+      #     rg_exists=$(az group exists --name ${{ env.RESOURCE_GROUP_NAME }})
+      #     if [ "$rg_exists" = "true" ]; then
+      #       echo "Resource group exists. Cleaning..."
+      #       az group delete \
+      #           --name ${{ env.RESOURCE_GROUP_NAME }} \
+      #           --yes \
+      #           --no-wait
+      #       echo "Resource group deleted...  ${{ env.RESOURCE_GROUP_NAME }}"
+      #     else
+      #       echo "Resource group does not exist."
+      #     fi
+
+      # - name: Wait for Resource Deletion to Complete
+      #   if: always()
+      #   run: |
+      #     echo "Waiting for all deployed resources (including AI Services) to be deleted..."
       
-          # Get the current resource list in YAML
-          resource_list=$(az resource list --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}" --output yaml)
+      #     # Convert AI_SERVICES space-separated string into an array
+      #     IFS=' ' read -r -a resources_to_check <<< "${{ env.AI_SERVICES }}"
       
-          # Set up retry logic
-          max_retries=3
-          retry_intervals=(30 60 120)
-          retries=0
+      #     echo "Resources to check for deletion:"
+      #     printf '%s\n' "${resources_to_check[@]}"
       
-          while true; do
-            resource_found=false
-            for resource in "${resources_to_check[@]}"; do
-              echo "Checking if resource '$resource' still exists..."
-              if echo "$resource_list" | grep -q "name: $resource"; then
-                echo "Resource '$resource' still exists."
-                resource_found=true
-              else
-                echo "Resource '$resource' has been deleted."
-              fi
-            done
+      #     # Get the current resource list in YAML
+      #     resource_list=$(az resource list --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}" --output yaml)
       
-            if [ "$resource_found" = true ]; then
-              retries=$((retries + 1))
-              if [ "$retries" -ge "$max_retries" ]; then
-                echo "Reached max retry attempts. Exiting wait loop."
-                break
-              else
-                echo "Some resources still exist. Waiting for ${retry_intervals[$((retries-1))]} seconds..."
-                sleep "${retry_intervals[$((retries-1))]}"
-                resource_list=$(az resource list --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}" --output yaml)
-              fi
-            else
-              echo "All resources have been deleted."
-              break
-            fi
-          done
+      #     # Set up retry logic
+      #     max_retries=3
+      #     retry_intervals=(30 60 120)
+      #     retries=0
+      
+      #     while true; do
+      #       resource_found=false
+      #       for resource in "${resources_to_check[@]}"; do
+      #         echo "Checking if resource '$resource' still exists..."
+      #         if echo "$resource_list" | grep -q "name: $resource"; then
+      #           echo "Resource '$resource' still exists."
+      #           resource_found=true
+      #         else
+      #           echo "Resource '$resource' has been deleted."
+      #         fi
+      #       done
+      
+      #       if [ "$resource_found" = true ]; then
+      #         retries=$((retries + 1))
+      #         if [ "$retries" -ge "$max_retries" ]; then
+      #           echo "Reached max retry attempts. Exiting wait loop."
+      #           break
+      #         else
+      #           echo "Some resources still exist. Waiting for ${retry_intervals[$((retries-1))]} seconds..."
+      #           sleep "${retry_intervals[$((retries-1))]}"
+      #           resource_list=$(az resource list --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}" --output yaml)
+      #         fi
+      #       else
+      #         echo "All resources have been deleted."
+      #         break
+      #       fi
+      #     done
         
 
-      - name: Wait for Soft Deletion of Key Vault and AI Services
-        if: always()
-        run: |
-          echo "Waiting for resources to be soft deleted..."
+      # - name: Wait for Soft Deletion of Key Vault and AI Services
+      #   if: always()
+      #   run: |
+      #     echo "Waiting for resources to be soft deleted..."
       
-          # Wait for Key Vault to be soft deleted
-          if [ -n "${{ env.KEYVAULT_NAME }}" ]; then
-            while true; do
-              DELETED_VAULT=$(az keyvault show-deleted --name ${{ env.KEYVAULT_NAME }} --query "id" -o tsv 2>/dev/null || echo "")
-              if [ -n "$DELETED_VAULT" ]; then
-                echo "Key Vault soft deleted!"
-                break
-              fi
-              echo "Key Vault not yet soft deleted. Retrying in 15s..."
-              sleep 15
-            done
-          fi
+      #     # Wait for Key Vault to be soft deleted
+      #     if [ -n "${{ env.KEYVAULT_NAME }}" ]; then
+      #       while true; do
+      #         DELETED_VAULT=$(az keyvault show-deleted --name ${{ env.KEYVAULT_NAME }} --query "id" -o tsv 2>/dev/null || echo "")
+      #         if [ -n "$DELETED_VAULT" ]; then
+      #           echo "Key Vault soft deleted!"
+      #           break
+      #         fi
+      #         echo "Key Vault not yet soft deleted. Retrying in 15s..."
+      #         sleep 15
+      #       done
+      #     fi
 
       
-          # Wait for AI Services to be soft deleted
-          for AI_SERVICE in ${{ env.AI_SERVICES }}; do
-            while true; do
-              DELETED_AI_SERVICE=$(az cognitiveservices account list-deleted --query "[?name=='$AI_SERVICE'].id" -o tsv 2>/dev/null || echo "")
-              if [ -n "$DELETED_AI_SERVICE" ]; then
-                echo "AI Service $AI_SERVICE is soft deleted!"
-                break
-              fi
-              echo "AI Service $AI_SERVICE not yet soft deleted. Retrying in 15s..."
-              sleep 15
-            done
-          done
+      #     # Wait for AI Services to be soft deleted
+      #     for AI_SERVICE in ${{ env.AI_SERVICES }}; do
+      #       while true; do
+      #         DELETED_AI_SERVICE=$(az cognitiveservices account list-deleted --query "[?name=='$AI_SERVICE'].id" -o tsv 2>/dev/null || echo "")
+      #         if [ -n "$DELETED_AI_SERVICE" ]; then
+      #           echo "AI Service $AI_SERVICE is soft deleted!"
+      #           break
+      #         fi
+      #         echo "AI Service $AI_SERVICE not yet soft deleted. Retrying in 15s..."
+      #         sleep 15
+      #       done
+      #     done
               
         
-      - name: Purge Key Vault and AI Services
-        if: always()
-        run: |
-          echo "Purging soft deleted resources..."
+      # - name: Purge Key Vault and AI Services
+      #   if: always()
+      #   run: |
+      #     echo "Purging soft deleted resources..."
           
-          # Ensure AI_SERVICES is properly split into individual services
-          IFS=' ' read -r -a SERVICES <<< "${{ env.AI_SERVICES }}"
+      #     # Ensure AI_SERVICES is properly split into individual services
+      #     IFS=' ' read -r -a SERVICES <<< "${{ env.AI_SERVICES }}"
 
-          for AI_SERVICE in "${SERVICES[@]}"; do
-            echo "Checking location for AI Service: $AI_SERVICE"
+      #     for AI_SERVICE in "${SERVICES[@]}"; do
+      #       echo "Checking location for AI Service: $AI_SERVICE"
 
-            # Fetch AI Service location
-            SERVICE_LOCATION=$(az cognitiveservices account list-deleted --query "[?name=='$AI_SERVICE'].location" -o tsv 2>/dev/null || echo "")
+      #       # Fetch AI Service location
+      #       SERVICE_LOCATION=$(az cognitiveservices account list-deleted --query "[?name=='$AI_SERVICE'].location" -o tsv 2>/dev/null || echo "")
 
-            if [ -n "$SERVICE_LOCATION" ]; then
-              echo "Purging AI Service $AI_SERVICE in $SERVICE_LOCATION"
-              az cognitiveservices account purge --location "$SERVICE_LOCATION" --resource-group "${{ env.RESOURCE_GROUP_NAME }}" --name "$AI_SERVICE"
-            else
-              echo "Could not determine location for AI Service: $AI_SERVICE. Skipping purge."
-            fi
-          done
+      #       if [ -n "$SERVICE_LOCATION" ]; then
+      #         echo "Purging AI Service $AI_SERVICE in $SERVICE_LOCATION"
+      #         az cognitiveservices account purge --location "$SERVICE_LOCATION" --resource-group "${{ env.RESOURCE_GROUP_NAME }}" --name "$AI_SERVICE"
+      #       else
+      #         echo "Could not determine location for AI Service: $AI_SERVICE. Skipping purge."
+      #       fi
+      #     done
 
-          # --- Purge Key Vaults ---
-          echo "Starting purge for Key Vaults..."
-          IFS=' ' read -r -a VAULTS <<< "${{ env.KEYVAULT_NAME }}"
+      #     # --- Purge Key Vaults ---
+      #     echo "Starting purge for Key Vaults..."
+      #     IFS=' ' read -r -a VAULTS <<< "${{ env.KEYVAULT_NAME }}"
 
-          for VAULT in "${VAULTS[@]}"; do
-            echo "Checking location for Key Vault: $VAULT"
+      #     for VAULT in "${VAULTS[@]}"; do
+      #       echo "Checking location for Key Vault: $VAULT"
 
-            # Fetch Key Vault location
-            VAULT_LOCATION=$(az keyvault list-deleted --query "[?name=='$VAULT'].properties.location" -o tsv 2>/dev/null || echo "")
+      #       # Fetch Key Vault location
+      #       VAULT_LOCATION=$(az keyvault list-deleted --query "[?name=='$VAULT'].properties.location" -o tsv 2>/dev/null || echo "")
 
-            if [ -n "$VAULT_LOCATION" ]; then
-              echo "Purging Key Vault $VAULT in $VAULT_LOCATION"
-              az keyvault purge --name "$VAULT" --location "$VAULT_LOCATION"
-            else
-              echo "Could not determine location for Key Vault: $VAULT. Skipping purge."
-            fi
-          done
+      #       if [ -n "$VAULT_LOCATION" ]; then
+      #         echo "Purging Key Vault $VAULT in $VAULT_LOCATION"
+      #         az keyvault purge --name "$VAULT" --location "$VAULT_LOCATION"
+      #       else
+      #         echo "Could not determine location for Key Vault: $VAULT. Skipping purge."
+      #       fi
+      #     done
 
 
       - name: Send Notification on Failure
@@ -419,4 +451,5 @@ jobs:
         if: always()
         run: |
           az logout
+          azd auth logout
           echo "Logged out from Azure."
