--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       RESOURCE_GROUP_NAME: ${{ steps.check_create_rg.outputs.RESOURCE_GROUP_NAME }}
-      SOLUTION_NAME: ${{ steps.generate_rg_name.outputs.SOLUTION_NAME }}
+      SOLUTION_NAME: ${{ steps.generate_solution_name.outputs.SOLUTION_NAME }}
       WEBAPP_URL: ${{ steps.deploy.outputs.WEBAPP_URL }}
     steps:
       - name: Checkout Code
