Adding a hardcoded createdBy parameter to the deploy.yml file to prevent validation pipeline failures caused by the deployer function in the Bicep file.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -149,7 +149,8 @@ jobs:
                 embeddingModel="text-embedding-ada-002" \
                 embeddingDeploymentCapacity=${{ env.TEXT_EMBEDDING_MIN_CAPACITY }} \
                 aiDeploymentsLocation=${{ env.AZURE_LOCATION }} \
-                imageTag="${IMAGE_TAG}"
+                imageTag="${IMAGE_TAG}"\
+                createdBy="Pipeline"
 
       - name: Get Deployment Output and extract Values
         id: get_output
