--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -36,9 +36,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-supersub": "^1.0.0",
-    "undici": "^5.29.0"
-  },
-  "overrides": {
+    "undici": "^5.29.0",
     "form-data": "4.0.4"
   },
   "devDependencies": {
