--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -36,8 +36,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-supersub": "^1.0.0",
-    "undici": "^5.29.0",
-    "form-data": "4.0.4"
+    "undici": "^5.29.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -70,6 +69,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "form-data": "^4.0.4",
     "globals": "^16.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
