ci pipe line fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -148,7 +148,7 @@ jobs:
                 gptDeploymentCapacity=${{ env.GPT_MIN_CAPACITY }} \
                 embeddingModel="text-embedding-ada-002" \
                 embeddingDeploymentCapacity=${{ env.TEXT_EMBEDDING_MIN_CAPACITY }} \
-                aiDeploymentsLocation=${{ env.AZURE_LOCATION }} \
+                azureAiServiceLocation=${{ env.AZURE_LOCATION }} \
                 imageTag="${IMAGE_TAG}"\
                 createdBy="Pipeline"
 
